# projectPython

./: Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb  Practicum_3.1_Opdrachten.ipynb  Practicum_3.2_Opdrachten.ipynb  Practicum_4.3_Opdrachten.ipynb  Script.ipynb  antwoordee.ipynb  data.html  pyproject.toml  pythonProject.ipynb
DEDS week 8/: ClassificatieModelWeek8.ipynb  RegressiemodelWeek8.ipynb  opdrachten.ipynb
Deds week 9/: ClustermodelKmeans.ipynb  FrequentItemset.ipynb
SunoTests/: Suno.ipynb  Suno.py
SunoTests/.ipynb_checkpoints/: Suno-checkpoint.ipynb
Week 11/: OnderzoeksData.ipynb
project/: Practicum_4.3_Opdrachten.ipynb  main.py  script.py  settings.py
