[tool.poetry]
name = "deds-portfolio"
version = "0.1.0"
description = ""
authors = ["markieboy223 <markvanderburg01@gmail.com>","Jaygerners <20127235@student.hhs.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
ipykernel = "^6.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
